--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,9 +7,11 @@
     </h1>
   <% end%>
   <div>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
-    method: :post do %>
-      <%= fa_icon "shopping-cart", text: 'Add' %> 
+    <% if product.quantity < 1%>
+      <button type="button" disabled class="soldout">Sold Out</button>
+    <% end %>
+      <%= button_to add_item_cart_path(product_id: product.id), disabled: product.quantity == 0, class: 'btn', method: :post do %>
+        <%= fa_icon "shopping-cart", text: 'Add'%> 
     <% end %>
   </div>
 </article>
