--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,8 +3,36 @@
   <header class="page-header">
     <h1>Order <%= @order.id %></h1>
   </header>
+  
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @order.line_items.each do |item| %>
+          <%= render 'item', product: Product.find(item.product_id), quantity: item.quantity %>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="4">
+            TOTAL:
+          </th>
+          <th>
+            <%= "$#{@order.total_cents / 100.00}" %>
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
 
-  <%= render 'item' %>
+  <text>Order placed with <%= @order.email %></text>
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
