add counts to admin dashboard

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Welcome to the Admin Dashboard!</h1>
+<br>
+<h2>Current Number of Products for Sale: <%=@products%></h2>
+<br>
+<h2>Current Number of Categories: <%=@categories%></h2>
+<br>
+<a href="/products">See the current line of products here</a>
