--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -67,7 +67,7 @@
         </li>
 
         <% if current_user %>
-          Signed in as <%= current_user.name %> | <%= link_to "Logout", '/logout' %>
+          Signed in as <%= current_user.first_name %> | <%= link_to "Logout", '/logout', method: "post" %>
         <% else %>
           <%= link_to "Login", "/login" %> | <%= link_to "Signup", "/signup" %>
         <% end %>
