add top-nav styling for login/logout text and links

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -67,9 +67,9 @@
         </li>
 
         <% if current_user %>
-          Signed in as <%= current_user.first_name %> | <%= link_to "Logout", '/logout', method: "post" %>
+          <text class="text-danger nav-link">Signed in as <%= current_user.first_name %></text> <%= link_to "Logout", '/logout', method: "post", class:"nav-link"%>
         <% else %>
-          <%= link_to "Login", "/login" %> | <%= link_to "Signup", "/signup" %>
+          <%= link_to "Login", "/login", class:"nav-link" %> <%= link_to "Signup", "/signup", class:"nav-link" %>
         <% end %>
 
       </ul>
