--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,11 +2,11 @@
 
 <%= form_for :user, url: '/users' do |f| %>
 
-  First Name: <%= f.text_field :first_name %>
-  Last Name: <%= f.text_field :last_name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
+  <h4>First Name:</h4> <%= f.text_field :first_name %>
+  <h4>Last Name:</h4> <%= f.text_field :last_name %>
+  <h4>Email:</h4> <%= f.text_field :email %>
+  <h4>Password:</h4> <%= f.password_field :password %>
+  <h4>Password Confirmation:</h4> <%= f.password_field :password_confirmation %>
   <%= f.submit "Submit" %>
 
 <% end %>
