--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
   <main class="container">
   <% if active_sale? %>
     <p class="alert alert-info">
-      There's an active <%= %> sale!
-      <strong>Everything is <%= %>% off!</strong>
+      There's an active <%= current_sale.name %>!
+      <strong>Everything is <%= current_sale.percent_off %>% off!</strong>
     </p>
   <% end %>
 
